# ursula-graph-checker

./: CMakeLists.txt  README.md  checker_test.py  python_test.py  sha256_test.c  ursulacheck.c  ursulacheck.h
tester/: CMakeLists.txt  default.cfg  main.c
